Add pokemon bulk 2024-11-11

--- a/sonasky.yaml
+++ b/sonasky.yaml
@@ -8093,3 +8093,516 @@ quilava:
   - lang: en
     name: Quilava
     description: This user is a Quilava!
+armarouge:
+  post: 3laozsgjr4n2k
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Armarouge
+    description: This user is an Armarouge!
+azumarill:
+  post: 3laozshae6q2v
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Azumarill
+    description: This user is an Azumarill!
+barboach:
+  post: 3laozsi2jo52k
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Barboach
+    description: This user is a Barboach!
+blaziken:
+  post: 3laozsiqdkj24
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Blaziken
+    description: This user is a Blaziken!
+bulbasaur:
+  post: 3laozsjlofx2z
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Bulbasaur
+    description: This user is a Bulbasaur!
+charizard:
+  post: 3laozskk56w2j
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Charizard
+    description: This user is a Charizard!
+chienpao:
+  post: 3laozslbvsd2g
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Chien-Pao
+    description: This user is a Chien-Pao!
+cinderace:
+  post: 3laozslxyso23
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Cinderace
+    description: This user is a Cinderace!
+cubone:
+  post: 3laozsmqbnv2k
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Cubone
+    description: This user is a Cubone!
+marowak:
+  post: 3laozsnt3cu22
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Marowak
+    description: This user is a Marowak!
+eeveelution:
+  post: 3laozsoizhm22
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Eeveelution
+    description: This user is an Eeveelution!
+emboar:
+  post: 3laozsp76dr2h
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Emboar
+    description: This user is an Emboar!
+floatzel:
+  post: 3laozsq4qz62j
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Floatzel
+    description: This user is a Floatzel!
+flygon:
+  post: 3laozsqz66w2j
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Flygon
+    description: This user is a Flygon!
+furret:
+  post: 3laozsrpbga2k
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Furret
+    description: This user is a Furret!
+gallade:
+  post: 3laozssfcxa2u
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Gallade
+    description: This user is a Gallade!
+garchomp:
+  post: 3laozst3pw623
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Garchomp
+    description: This user is a Garchomp!
+groudon:
+  post: 3laozstsgti2k
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Groudon
+    description: This user is a Groudon!
+houndoom:
+  post: 3laozsutxzm2e
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Houndoom
+    description: This user is a Houndoom!
+houndour:
+  post: 3laozsvk5pd2g
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Houndour
+    description: This user is a Houndour!
+kecleon:
+  post: 3laozswa7jb2h
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Kecleon
+    description: This user is a Kecleon!
+kommoo:
+  post: 3laozswvzvi2v
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Kommo-o
+    description: This user is a Kommo-o!
+koraidon:
+  post: 3laozsxugwu2e
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Koraidon
+    description: This user is a Koraidon!
+latios:
+  post: 3laozsymepp2a
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Latios
+    description: This user is a Latios!
+lilligant:
+  post: 3laozszcj5y2v
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Lilligant
+    description: This user is a Lilligant!
+lugia:
+  post: 3laozszyqyi2u
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Lugia
+    description: This user is a Lugia!
+lurantis:
+  post: 3laozt34wou2e
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Lurantis
+    description: This user is a Lurantis!
+meowscarada:
+  post: 3laozt3tujz2h
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Meowscarada
+    description: This user is a Meowscarada!
+meowth:
+  post: 3laozt4jy3u2e
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Meowth
+    description: This user is a Meowth!
+morgrem:
+  post: 3laozt57m2m22
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Morgrem
+    description: This user is a Morgrem!
+mudkip:
+  post: 3laozt5vof62j
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Mudkip
+    description: This user is a Mudkip!
+murkrow:
+  post: 3laozt6pykf2x
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Murkrow
+    description: This user is a Murkrow!
+nickit:
+  post: 3laozt7jyxa2v
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Nickit
+    description: This user is a Nickit!
+nidorina:
+  post: 3laoztaaaul2w
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Nidorina
+    description: This user is a Nidorina!
+nidorino:
+  post: 3laoztawjyo2j
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Nidorino
+    description: This user is a Nidorino!
+pachirisu:
+  post: 3laoztbmosp2z
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Pachirisu
+    description: This user is a Pachirisu!
+passimian:
+  post: 3laoztck6ie2e
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Passimian
+    description: This user is a Passimian!
+porygon2:
+  post: 3laoztdc6nt2w
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Porygon2
+    description: This user is a Porygon2!
+porygonz:
+  post: 3laoztdxvtb2h
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Porygon-Z
+    description: This user is a Porygon-Z!
+pumpkaboo:
+  post: 3laozterjun2k
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Pumpkaboo
+    description: This user is a Pumpkaboo!
+raboot:
+  post: 3laoztfneei2k
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Raboot
+    description: This user is a Raboot!
+rayquaza:
+  post: 3laoztghvwe2e
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Rayquaza
+    description: This user is a Rayquaza!
+reshiram:
+  post: 3laozth5z6f2x
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Reshiram
+    description: This user is a Reshiram!
+reuniclus:
+  post: 3laozthu2q32g
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Reuniclus
+    description: This user is a Reuniclus!
+sableye:
+  post: 3laoztijngf2p
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Sableye
+    description: This user is a Sableye!
+scizor:
+  post: 3laoztjffbx2a
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Scizor
+    description: This user is a Scizor!
+seviper:
+  post: 3laoztkag3l2g
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Seviper
+    description: This user is a Seviper!
+shinx:
+  post: 3laoztl2va52k
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Shinx
+    description: This user is a Shinx!
+skarmory:
+  post: 3laoztlqszj24
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Skarmory
+    description: This user is a Skarmory!
+slowbro:
+  post: 3laoztmgti52k
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Slowbro
+    description: This user is a Slowbro!
+slowpoke:
+  post: 3laoztnemm52k
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Slowpoke
+    description: This user is a Slowpoke!
+snivy:
+  post: 3laozto6yq422
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Snivy
+    description: This user is a Snivy!
+stakataka:
+  post: 3laoztovd2y2k
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Stakataka
+    description: This user is a Stakataka!
+suicune:
+  post: 3laoztplgm422
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Suicune
+    description: This user is a Suicune!
+terapagos:
+  post: 3laoztqcbpn2x
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Terapagos
+    description: This user is a Terapagos!
+togekiss:
+  post: 3laoztqzp6h2z
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Togekiss
+    description: This user is a Togekiss!
+tyranitar:
+  post: 3laoztrqlim22
+  realm: pokemon
+  category:
+    en: Pokemon
+  locales:
+  - lang: en
+    name: Tyranitar
+    description: This user is a Tyranitar!
